# AUTOPOM

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docs.sh  pyproject.toml  run.sh  setup.sh
.github/workflows/: ci.yml
docs/: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: changelog.md  index.md
docs/docs/api/: core-interfaces.md
docs/docs/architecture/: overview.md
docs/docs/contributing/: guidelines.md
docs/docs/getting-started/: configuration.md  quickstart.md
docs/docs/guides/: agentic-loop.md  element-mapping.md  java-generation.md  self-healing.md  state-management.md
docs/docs/troubleshooting/: common-issues.md
docs/docs/tutorials/: authenticated-crawl.md  custom-selectors.md  first-run.md
docs/docs/use-cases/: ecommerce-webapp.md  internal-portal.md
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css
src/autopom/: __init__.py  config.py
src/autopom/agent/: orchestrator.py  policies.py  state_store.py
src/autopom/browser/: browseruse_adapter.py
src/autopom/cli/: main.py
src/autopom/extraction/: dom_compactor.py  schema.py  semantic_prompts.py  visual_mapper.py
src/autopom/generation/: java_generator.py
tests/: test_orchestrator_smoke.py
tests/integration/: test_orchestrator_integration_unittest.py
tests/unit/: test_cdp_connection.py  test_cli_and_browser_adapter_unittest.py  test_java_generator_unittest.py  test_playwright_pom_generator_unittest.py  test_policies_and_state_unittest.py  test_selector_verifier_unittest.py
(+7 files in other folders)
