[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopom-agent"
version = "0.1.0"
description = "Autonomous web crawler and Java Playwright POM generator"
readme = "AUTOPOM_AGENT_README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
ai = [
  "langchain>=0.3.0",
]
browser = [
  "playwright>=1.50.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
autopom = "autopom.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
